update quickstart workflow

--- a/docs/_source/getting_started/quickstart_workflow.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow.ipynb
@@ -10,11 +10,11 @@
         "# Workflow other datasets\n",
         "Welcome! This will cover a default workflow from logging data to preparing for training.\n",
         "\n",
-        "<div class=\"alert alert-warning\">\n",
+        "<div class=\"alert alert-info\">\n",
         "\n",
-        "Warning\n",
+        "info\n",
         "\n",
-        "This workflow covers the `DatasetForTextClassification`, `DatasetForTokenClassification`, and `DatasetForText2Text``. The workflow for the `FeedbackDataset`, `DatasetForTokenClassification`, and `DatasetForText2Text` can be found [here](/getting_started/quickstart_workflow.html). Not sure which dataset to use? Check out our section on [choosing a dataset](/getting_started/choose_dataset.html).\n",
+        "This workflow covers the `FeedbackDataset`. The workflow for the `DatasetForTextClassification`, `DatasetForTokenClassification`, and `DatasetForText2Text` can be found [here](/getting_started/quickstart_workflow.html). Not sure which dataset to use? Check out our section on [choosing a dataset](/getting_started/choose_dataset.html).\n",
         "\n",
         "</div>"
       ]
@@ -55,7 +55,7 @@
         "id": "UL17lWRKXwOI"
       },
       "source": [
-        "## Launch the Argilla Server and UI.\n",
+        "## Set Up Argilla\n",
         "\n",
         "You can quickly deploy Argilla Server on [HF Spaces](https://huggingface.co/new-space?template=argilla/argilla-template-space).\n",
         "\n",
@@ -133,11 +133,9 @@
         "\n",
         "`admin` is the name of default workspace. A **workspace** is a “space” inside your Argilla instance where authorized users can collaborate.\n",
         "\n",
-        "If you want to initialize a connection manually you can use `rg.init()`. For more info about custom configurations like headers and workspace separation, check our [config page](../getting_started/installation/configurations/configurations.md).\n",
+        "If you want to initialize a connection manually you can use `rg.init()`. For more info about custom configurations like headers and workspace separation, check our [config page](/getting_started/installation/configurations/configurations.md).\n",
         "\n",
-        "If you want to customize the access credentials, take a look at our [user management section](../getting_started/installation/configurations/user_management.md).\n",
-        "\n",
-        "\n"
+        "If you want to customize the access credentials, take a look at our [user management section](/getting_started/installation/configurations/user_management.md)."
       ]
     },
     {
@@ -162,11 +160,7 @@
         " - `prediction`: Add task-specific model predictions to the record (Optional);\n",
         " - `metadata`: Add some arbitrary metadata to the record (Optional);\n",
         "\n",
-        "A [Dataset](../guides/features/datasets.ipynb) in Argilla is a collection of records of the same type.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "A [Dataset](/conceptual_guides/data_model.md#other-datasets) in Argilla is a collection of records of the same type."
       ]
     },
     {
@@ -2078,7 +2072,7 @@
         "id": "b85a058b"
       },
       "source": [
-        "### An annotation guideline\n",
+        "### Annotation guideline\n",
         "\n",
         "Before starting the annotation process with a team, it is important to align the different truths everyone in the team thinks they have. Because the same text is going to be annotated by multiple annotators independently or we might want to revisit an old dataset later on. Besides a set of obvious mistakes, we also often encounter uncertain grey areas. Consider the following phrase for NER-annotation `Harry Potter and the prisoner of Azkaban` can be interpreted in many ways. The entire phrase is as the movie title, `Harry Potter` is a person, and `Azkaban` is location. Maybe we don´t even want to annotate fictional locations and characters. Therefore, it is important to define these assumptions beforehand and iterate over them together with the team. Take a look at [this blog](https://www.superb-ai.com/blog/how-to-write-better-annotation-guidelines-for-human-labelers-4-top-tips) from our friends over at `suberb.ai` or [this blog](https://www.grammarly.com/blog/engineering/annotation-best-practices/?utm_campaign=B2C&utm_medium=social&utm_source=LinkedIn_org&utm_term=blog&utm_content=link) from Grammarly for more context."
       ]
@@ -2177,250 +2171,6 @@
     },
     {
       "cell_type": "markdown",
-      "id": "f1144ce2-0fe2-48c0-8116-d57dc4429640",
-      "metadata": {
-        "id": "f1144ce2-0fe2-48c0-8116-d57dc4429640"
-      },
-      "source": [
-        "## Prepare training data"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "c5437bcd-b42c-4f6b-a9f5-d4b45572c648",
-      "metadata": {
-        "id": "c5437bcd-b42c-4f6b-a9f5-d4b45572c648"
-      },
-      "source": [
-        "Once you have uploaded and annotated your dataset in Argilla, you are ready to prepare it for training a model. Most NLP models today are trained via [supervised learning](https://en.wikipedia.org/wiki/Supervised_learning) and need input-output pairs to serve as training examples for the model. The input part of such pairs is usually the text itself, while the output is the corresponding annotation."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "a62573a8-54c8-4002-9686-3450ad90c7a3",
-      "metadata": {
-        "id": "a62573a8-54c8-4002-9686-3450ad90c7a3"
-      },
-      "source": [
-        "### Manual extraction by querying"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "73b1923f-b100-4755-aba9-68d7de48d247",
-      "metadata": {
-        "id": "73b1923f-b100-4755-aba9-68d7de48d247"
-      },
-      "source": [
-        "The exact data format for training a model depends on your [training framework](#how-to-train-a-model) and the task you are tackling (text classification, token classification, etc.). Argilla is framework agnostic; you can always manually extract from the records what you need for the training.\n",
-        "\n",
-        "More info about querying can be found [here](query_datasets.md).\n",
-        "\n",
-        "The extraction happens using the [client library](../reference/python/python_client.rst) within a Python script, a Jupyter notebook, or another IDE. First, we have to load the annotated dataset from Argilla."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "268ed86e-881d-4196-adc2-ebe01dacb306",
-      "metadata": {
-        "id": "268ed86e-881d-4196-adc2-ebe01dacb306"
-      },
-      "outputs": [],
-      "source": [
-        "dataset = rg.load(\"snapchat_reviews\", query=\"annotated_as: *\", limit=1968)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "d061ca1a-98db-4c31-9362-f816e401c2b5",
-      "metadata": {
-        "id": "d061ca1a-98db-4c31-9362-f816e401c2b5"
-      },
-      "source": [
-        "<div class=\"alert alert-info\">\n",
-        "\n",
-        "Note\n",
-        "    \n",
-        "If you follow a weak supervision approach, the steps are slightly different.\n",
-        "We refer you to our [weak supervision guide](programmatic_labeling_with_rules.html) for a complete workflow.\n",
-        "    \n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "e6d94095-7cac-4810-97fe-c257b8f34a2c",
-      "metadata": {
-        "id": "e6d94095-7cac-4810-97fe-c257b8f34a2c"
-      },
-      "source": [
-        "Then we can iterate over the records and extract our training examples. For example, let's assume you want to train a text classifier with a [sklearn pipeline](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html) that takes as input a text and outputs a label."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "d34397c3-5b0d-4151-9945-135f54520f7e",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d34397c3-5b0d-4151-9945-135f54520f7e",
-        "outputId": "ceb9f07d-302c-4e93-a514-bc58838452f7"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "This is honestly the best app ever!\n",
-            "Predicted_label: ['5'] stars\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Import the necessary libraries\n",
-        "from sklearn.pipeline import Pipeline\n",
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "\n",
-        "# Save the inputs and labels in Python lists\n",
-        "inputs, labels = [], []\n",
-        "\n",
-        "# Iterate over the records in the dataset\n",
-        "for record in dataset:\n",
-        "    # We only want records with annotations\n",
-        "    if record.annotation:\n",
-        "        inputs.append(record.text)\n",
-        "        labels.append(record.annotation)\n",
-        "\n",
-        "# Create a text classifier pipeline\n",
-        "pipeline = Pipeline([\n",
-        "    (\"tfidf\", TfidfVectorizer()),\n",
-        "    (\"logistic\", LogisticRegression())\n",
-        "])\n",
-        "\n",
-        "# Train the text classifier\n",
-        "pipeline.fit(inputs, labels)\n",
-        "\n",
-        "# Apply the text classifier\n",
-        "sentence = \"This is honestly the best app ever!\"\n",
-        "label = pipeline.predict([sentence])\n",
-        "\n",
-        "# Print the predicted label\n",
-        "print(sentence)\n",
-        "print(f\"Predicted_label: {label} stars\")\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "dbd8be8e-dd83-4506-8ed8-2f32cf6b5835",
-      "metadata": {
-        "id": "dbd8be8e-dd83-4506-8ed8-2f32cf6b5835"
-      },
-      "source": [
-        "### Automatic extraction"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "bbf82fc5-d3a5-4a56-b308-caf31a4d763b",
-      "metadata": {
-        "id": "bbf82fc5-d3a5-4a56-b308-caf31a4d763b"
-      },
-      "source": [
-        "For a few frameworks and tasks, Argilla provides a convenient method to automatically extract training examples in a suitable format from a dataset.\n",
-        "\n",
-        "For example: If you want to train a [transformers](https://huggingface.co/docs/transformers/index) model for text classification, you can load an annotated dataset for text classification and call the `prepare_for_training()` method:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "aa1c2aa8-603b-48a5-8da4-11c7e93f9772",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aa1c2aa8-603b-48a5-8da4-11c7e93f9772",
-        "outputId": "f563c3bc-1025-4096-c87f-ba3c598abb4e"
-      },
-      "outputs": [],
-      "source": [
-        "dataset_for_training = dataset.prepare_for_training(train_size=0.8)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "c71ee9dc-93b8-4802-83bc-e63048a83073",
-      "metadata": {
-        "id": "c71ee9dc-93b8-4802-83bc-e63048a83073"
-      },
-      "source": [
-        "With the returned `dataset_for_training`, you can continue following the steps to [fine-tune a pre-trained model](https://huggingface.co/docs/transformers/training#finetune-a-pretrained-model) with the [transformers library](https://huggingface.co/docs/transformers/index).\n",
-        "\n",
-        "Check the dedicated [dataset guide [PLEASE UPDATE URL]](log_load_and_prepare_data.html) for more examples of the `prepare_for_training()` method."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "Jl5VmRjWFlGY",
-      "metadata": {
-        "id": "Jl5VmRjWFlGY"
-      },
-      "outputs": [],
-      "source": [
-        "# Import the necessary libraries\n",
-        "from transformers import TrainingArguments, Trainer, AutoTokenizer, AutoModelForSequenceClassification\n",
-        "import numpy as np\n",
-        "import evaluate\n",
-        "\n",
-        "# Load the tokenizer\n",
-        "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
-        "\n",
-        "# Create a function to tokenize the text data\n",
-        "def tokenize_function(examples):\n",
-        "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)\n",
-        "\n",
-        "# Create training and test datasets\n",
-        "train_dataset = dataset_for_training[\"train\"].map(tokenize_function, batched=True)\n",
-        "test_dataset = dataset_for_training[\"test\"].map(tokenize_function, batched=True)\n",
-        "\n",
-        "# Create a smaller version of the training and test datasets (only for demo)\n",
-        "small_train_dataset = train_dataset.shuffle(seed=42).select(range(100))\n",
-        "small_eval_dataset = test_dataset.shuffle(seed=42).select(range(100))\n",
-        "\n",
-        "# Load the model\n",
-        "model = AutoModelForSequenceClassification.from_pretrained(\"bert-base-cased\", num_labels=5)\n",
-        "\n",
-        "# Create the training arguments, load the accuracy metric:\n",
-        "training_args = TrainingArguments(output_dir=\"test_trainer\")\n",
-        "metric = evaluate.load(\"accuracy\")\n",
-        "\n",
-        "# Create a function to compute the metrics\n",
-        "def compute_metrics(eval_pred):\n",
-        "    logits, labels = eval_pred\n",
-        "    predictions = np.argmax(logits, axis=-1)\n",
-        "    return metric.compute(predictions=predictions, references=labels)\n",
-        "\n",
-        "# Create the trainer\n",
-        "trainer = Trainer(\n",
-        "    model=model,\n",
-        "    args=training_args,\n",
-        "    train_dataset=small_train_dataset,\n",
-        "    eval_dataset=small_eval_dataset,\n",
-        "    compute_metrics=compute_metrics,\n",
-        ")\n",
-        "\n",
-        "# Train the model\n",
-        "trainer.train()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "90307acf-ba85-4f8c-86d3-ca398be7a496",
       "metadata": {
         "id": "90307acf-ba85-4f8c-86d3-ca398be7a496"
@@ -2428,7 +2178,7 @@
       "source": [
         "## Train a model\n",
         "\n",
-        "The `ArgillaTrainer` is a wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract workflow to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.  More info [here](https://docs.argilla.io/en/latest/guides/train_a_model.html)"
+        "The `ArgillaTrainer` is a wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract workflow to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.  More info [here](docs/_source/practical_guides/fine_tune)."
       ]
     },
     {
@@ -2441,6 +2191,8 @@
       "outputs": [],
       "source": [
         "from argilla.training import ArgillaTrainer\n",
+        "\n",
+        "sentence = \"I love Snapchat, but the new update is terrible. I can't find anything anymore.\"\n",
         "\n",
         "trainer = ArgillaTrainer(\n",
         "    name=\"snapchat_reviews\",\n",
@@ -2456,7 +2208,7 @@
         "# Print the prediction\n",
         "print(\"\\ntesting predicitons...\")\n",
         "print(sentence)\n",
-        "print(f\"Predicted_label: {records.prediction}\")\n"
+        "print(f\"Predicted_label: {records.prediction}\")"
       ]
     },
     {
@@ -2466,9 +2218,7 @@
         "id": "29cb1351-6324-4faa-9067-fd50785844f5"
       },
       "source": [
-        "Argilla helps you to create and curate training data. **It is not a complete framework for training a model.** You can use Argilla complementary with other excellent open-source frameworks that focus on developing and training NLP models.\n",
-        "\n",
-        "Train/fine-tune a model from a `FeedbackDataset` as explained [here](/guides/llms/practical_guides/practical_guides.html), or either a `TextClassificationDataset` or a `TokenClassificationDataset` [here](/guides/train_a_model.html).\n",
+        "Argilla helps you to create and curate training data. **It is not a complete framework for training a model but we do provide integrations.** You can use Argilla complementary with other excellent open-source frameworks that focus on developing and training NLP models.\n",
         "\n",
         "Here we list three of the most commonly used open-source libraries, but many more are available and may be more suited for your specific use case:\n",
         "\n",
