--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -28,6 +28,26 @@
     },
     {
       "cell_type": "markdown",
+      "id": "fbc7acc7",
+      "metadata": {},
+      "source": [
+        "## Install Libraries\n",
+        "\n",
+        "Install Argilla latest version in Colab, along with other libraries and models used in this notebook."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f808bb22",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install argilla datasets setfit evaluate seqeval"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "EwDfn8E7W7jD",
       "metadata": {
         "id": "EwDfn8E7W7jD"
@@ -35,43 +55,15 @@
       "source": [
         "## Set Up Argilla\n",
         "\n",
-        "You have two choices to install and run Argilla to work on Feedback Datasets, either deploying Argilla Server on HuggingFace Spaces or running Argilla Server locally on your computer by means of Docker."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "UL17lWRKXwOI",
-      "metadata": {
-        "id": "UL17lWRKXwOI"
-      },
-      "source": [
-        "### Deployment on HF Spaces\n",
+        "You can quickly deploy Argilla Server on [HF Spaces](https://huggingface.co/new-space?template=argilla/argilla-template-space).\n",
         "\n",
-        "After you deploy Argilla on [HF Spaces](https://docs.argilla.io/en/latest/getting_started/quickstart_installation.html#%F0%9F%91%A9%F0%9F%8F%BD%E2%80%8D%F0%9F%9A%80-Argilla-on-Hugging-Face-Spaces), install the required packages in Colab.\n",
-        "\n",
-        "```\n",
-        "!pip install argilla transformers evaluate datasets -qqq\n",
-        "```"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "0c62aee6",
-      "metadata": {},
-      "source": [
-        "### Deployment on Docker\n",
-        "\n",
-        "After you [install and run Docker](/getting_started/installation/deployments/deployments.html) on your computer, get Argilla UI up and running;\n",
+        "Alternatively, if you want to run Argilla locally on your own computer, the easiest way to get Argilla UI up and running is to deploy on Docker:\n",
         "\n",
         "```\n",
         "docker run -d --name quickstart -p 6900:6900 argilla/argilla-quickstart:latest\n",
         "```\n",
         "\n",
-        "and install the packages required.\n",
-        "\n",
-        "```\n",
-        "!pip install argilla transformers evaluate datasets -qqq\n",
-        "```"
+        "More info on Installation [here](/getting_started/installation/deployments/deployments.html)."
       ]
     },
     {
@@ -92,7 +84,7 @@
         "id": "klwYMH_rdv0m"
       },
       "source": [
-        "You need to initialize the Argilla client with `API_URL` and `API_KEY`: "
+        "It is possible to connect to our Argilla instance by simply importing Argilla library, which internally connects to Argilla Server using the `ARGILLA_API_URL` and `ARGILLA_API_KEY` environment variables."
       ]
     },
     {
@@ -104,12 +96,36 @@
       },
       "outputs": [],
       "source": [
-        "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
-        "# Replace api_key if you configured a custom API key\n",
-        "rg.init(\n",
-        "    api_url=\"http://localhost:6900\",\n",
-        "    api_key=\"admin.apikey\"\n",
-        ")"
+        "import os\n",
+        "#set your variable here\n",
+        "os.environ[\"ARGILLA_API_URL\"] = \"your_argilla_URL\"\n",
+        "os.environ[\"ARGILLA_API_KEY\"] = \"owner.apikey\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "211a9ff3",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import argilla as rg\n",
+        "\n",
+        "rg.init(workspace=\"admin\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c4e763b4",
+      "metadata": {},
+      "source": [
+        "`\"owner.apikey\"` is the default value for `ARGILLA_API_KEY` variable.\n",
+        "\n",
+        "`admin` is the name of default workspace. A **workspace** is a “space” inside your Argilla instance where authorized users can collaborate.\n",
+        "\n",
+        "If you want to initialize a connection manually you can use `rg.init()`. For more info about custom configurations like headers and workspace separation, check our [config page](../getting_started/installation/configurations/configurations.md).\n",
+        "\n",
+        "If you want to customize the access credentials, take a look at our [user management section](../getting_started/installation/configurations/user_management.md)."
       ]
     },
     {
@@ -117,7 +133,7 @@
       "id": "423d6483",
       "metadata": {},
       "source": [
-        "## Feedback Datasets\n",
+        "## Create Dataset\n",
         "\n",
         "FeedbackDataset is the container for Argilla Feedback structure. Argilla Feedback offers different components for FeedbackDatasets that you can employ for various aspects of your workflow. To start, we need to define fields, questions and records while we optionally have the opportunity to employ responses and suggestions for our task later.\n",
         "\n",
@@ -134,7 +150,6 @@
       "outputs": [],
       "source": [
         "import argilla as rg\n",
-        "import datasets, transformers, evaluate\n",
         "from argilla.feedback import ArgillaTrainer, TrainingTask"
       ]
     },
@@ -172,7 +187,7 @@
         "    rg.LabelQuestion(\n",
         "        name=\"relevant\",\n",
         "        title=\"Relevancy\",\n",
-        "        labels={\"YES\": \"Yes\", \"NO\": \"No\"},\n",
+        "        labels=[\"yes\", \"no\"],\n",
         "        required=True,\n",
         "        visible_labels=None\n",
         "    )\n",
@@ -184,7 +199,7 @@
       "id": "0ac69d4d",
       "metadata": {},
       "source": [
-        "While `name` is the name of the question internally, `title` will be the question/instruction seen on Argilla UI. We also define a dictionary for labels."
+        "While `name` is the indentifier of the question internally, `title` will be the question/instruction seen on Argilla UI. We also define a dictionary for labels."
       ]
     },
     {
@@ -192,9 +207,11 @@
       "id": "b962aeee",
       "metadata": {},
       "source": [
-        "We can now create our FeedbackDataset instance with the fields and question type as shown above. As it is helpful for annotators, we can enrich our task with `guidelines` as well. Clear guidelines will help them to understand the task better and make more accurate annotations. There are two ways to have guidelines: defining it as an argument to the FeedbackDataset or as an argument (`description`) to the question instances above. Depending on the specific task you employ, you may want to use either one of them so, it is a good practice to give a try to the both.\n",
+        "### Annotation guideline\n",
         "\n",
-        "Do not forget to define `fields` and `questions` as a list, while `guidelines` expects a string."
+        "As it is helpful for annotators, we can enrich our task with `guidelines` as well. Clear guidelines will help them to understand the task better and make more accurate annotations. There are two ways to have guidelines: defining it as an argument to the FeedbackDataset or as an argument (`description`) to the question instances above. Depending on the specific task you employ, you may want to use either one of them so, it is a good practice to give a try to the both.\n",
+        "\n",
+        "We can now create our FeedbackDataset instance with the fields, question type as shown above. Do not forget to define `fields` and `questions` as a list, while `guidelines` expects a string."
       ]
     },
     {
@@ -208,7 +225,15 @@
         "    guidelines=\"Annotations should be made according to the policy.\",\n",
         "    fields=fields,\n",
         "    questions=label_question\n",
-        "    )"
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "4b099e23",
+      "metadata": {},
+      "source": [
+        "## Upload data"
       ]
     },
     {
@@ -241,12 +266,40 @@
     },
     {
       "cell_type": "markdown",
+      "id": "9febcaa9",
+      "metadata": {},
+      "source": [
+        "### Responses\n",
+        "\n",
+        "Argilla Feedback can deal with multiple ressponses per record for each one of the annotators. We can define a responses list for each record. Each response will be a dictionary with the annotator name as the key and the response as the value."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "230ad6cc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "record.responses = [\n",
+        "    {\n",
+        "        \"values\":{\n",
+        "            \"relevant\":{\n",
+        "                \"value\": \"yes\"\n",
+        "            }\n",
+        "        }\n",
+        "    }\n",
+        "]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "c5767608",
       "metadata": {},
       "source": [
         "### Suggestions\n",
         "\n",
-        "Feedback datasets offer the opportunity to add suggested responses to your dataset, which are mainly model predictions for each of your data item. To add model suggestions, we can obtain inferences from a model and those suggested responses to our dataset. For this, let us create a dataset to insert the records with their suggestions."
+        "Argilla Feedback offers a way to use suggestions from LLMs and other models as a starting point for annotators. This way, annotators can save time and effort by correcting the predictions instead of annotating from scratch."
       ]
     },
     {
@@ -260,8 +313,7 @@
         "    suggestions=[\n",
         "        {\n",
         "        \"question_name\": \"label_question\",\n",
-        "        \"score\": 0.8,\n",
-        "        \"value\": \"YES\"\n",
+        "        \"value\": \"yes\"\n",
         "        }\n",
         "    ]\n",
         ")"
@@ -290,8 +342,6 @@
       "id": "5ad19311",
       "metadata": {},
       "source": [
-        "## Pushing to Argilla\n",
-        "\n",
         "Now that we have our dataset with already annotated responses and suggestions as model predictions, we can push the dataset to the Argilla space.\n",
         "\n",
         "<div class=\"alert alert-info\">\n",
@@ -318,11 +368,11 @@
       "id": "5a5a3bf3",
       "metadata": {},
       "source": [
-        "## Training\n",
+        "## Train a model\n",
         "\n",
         "As with other datasets, Feedback datasets also allow to create a training pipeline and make inference with the resulting model. After you gather responses with Argilla Feedback, you can easily fine-tune an LLM. In this example, we will have complete a text classification task.\n",
         "\n",
-        "For fine-tuning, we will use transformers library and `ArgillaTrainer`, which is a powerful wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract representation to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.\n",
+        "For fine-tuning, we will use setfit library and the [Argilla Trainer](/practical_guides/fine_tune.html#the-trainingtask), which is a powerful wrapper around many of our favorite NLP libraries. It provides a very intuitive abstract representation to facilitate simple training workflows using decent default pre-set configurations without having to worry about any data transformations from Argilla.\n",
         "\n",
         "Let us first create our dataset to train. For this example, we will use [emotion](https://huggingface.co/datasets/argilla/emotion) dataset from Argilla, which was created using Argilla. Each text item has its responses as 6 different sentiments, which are Sadness, Joy, Love, Anger, Fear and Surprise."
       ]
@@ -343,7 +393,7 @@
       "id": "861c3648",
       "metadata": {},
       "source": [
-        "We can then start to create training pipeline by first defining `TrainingTask`, which is used to define how the data should be processed and formatted according to the associated task and framework. Each task has its own classmethod and the data formatting can always be customized via `formatting_func`. You can visit [here](guides/llms/practical_guides/fine_tune.html#the-trainingtask) for more info. Simpler tasks like text classification can be defined using default definitions, as we do in this example."
+        "We can then start to create training pipeline by first defining `TrainingTask`, which is used to define how the data should be processed and formatted according to the associated task and framework. Each task has its own classmethod and the data formatting can always be customized via `formatting_func`. You can visit [this page](/practical_guides/fine_tune.html#the-trainingtask) for more info. Simpler tasks like text classification can be defined using default definitions, as we do in this example."
       ]
     },
     {
@@ -379,7 +429,7 @@
         "trainer = ArgillaTrainer(\n",
         "    dataset=dataset_hf,\n",
         "    task=task,\n",
-        "    framework=\"transformers\",\n",
+        "    framework=\"setfit\",\n",
         "    train_size=0.8\n",
         ")"
       ]
@@ -399,7 +449,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer.update_config(pretrained_model_name_or_path = \"distilbert-base-uncased\")"
+        "trainer.update_config(num_train_epochs=2)"
       ]
     },
     {
@@ -417,7 +467,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer.train(output_dir=\"transformers_model\")"
+        "trainer.train(output_dir=\"setfit_model\")"
       ]
     },
     {
@@ -443,7 +493,7 @@
       "id": "85ad4ad2",
       "metadata": {},
       "source": [
-        "We have trained a model with FeedbackDataset in this tutorial. For more info about concepts in Argilla Feedback and LLMs, look at [here](/guides/llms/conceptual_guides/conceptual_guides.html). To see more hands-on tutorials about FeedbackDataset, please look at [here](/guides/llms/practical_guides/practical_guides.html)."
+        "We have trained a model with FeedbackDataset in this tutorial. For more info about concepts in Argilla Feedback and LLMs, look at [here](/conceptual_guides/llm/llm.html). To see more hands-on tutorials about FeedbackDataset, please look at [here](/practical_guides/practical_guides.html)."
       ]
     },
     {
