resolved failing documentation build

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/trainer-feedback-setfit.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/trainer-feedback-setfit.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "In this example, we will show how to use the `ArgillaTrainer` to fine-tune a SetFit model on a `FeedbackDataset` made of categorical questions like `LabelQuestion` and `MultiLabelQuestion`.\n",
     "\n",
-    "We will start from this [tutorial for setfit](https://docs.argilla.io/en/latest/guides/llms/examples/labelling-feedback-setfit.html), using the same dataset and adapting it to the new trainer class. Some background can be found in this [ArgillaTrainer guide](/practical_guides/fine_tune.html) if needed.\n",
+    "We will start from this [tutorial for setfit](/tutorials_and_integrations/tutorials/feedback/labelling-feedback-setfit.html), using the same dataset and adapting it to the new trainer class. Some background can be found in this [ArgillaTrainer guide](/practical_guides/fine_tune.html) if needed.\n",
     "\n",
     "Let's get started!\n",
     "\n",
@@ -39,7 +39,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "For this tutorial, you will need to have an Argilla server running. If you don't have one already, check out our [Quickstart](../../../getting_started/quickstart.md) or [Installation](../../../getting_started/installation/installation.md) pages. Once you do, complete the following steps:\n",
+    "For this tutorial, you will need to have an Argilla server running. If you don't have one already, check out our [Quickstart](/getting_started/quickstart.html) or [Installation](/getting_started/installation/installation.html) pages. Once you do, complete the following steps:\n",
     "\n",
     "1. Install the Argilla client and the required third party libraries using `pip`:"
    ]
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Demo Feedback dataset with ArgillaTrainer](../../../_static/images/llms/training-feedback-setfit/training-feedback-setfit.png)"
+    "![Demo Feedback dataset with ArgillaTrainer](/_static/images/llms/training-feedback-setfit/training-feedback-setfit.png)"
    ]
   },
   {
@@ -729,11 +729,10 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "In this tutorial we have covered how to train a SetFit model using the new `ArgillaTrainer` with a `FeedbackDataset`. Building on the [Add zero-shot suggestions using SetFit](../../../tutorials/libraries/setfit.md) tutorial we have learnt how to train models on our datasets using the new Argilla APIs, without leaving Argilla.\n",
+    "In this tutorial we have covered how to train a SetFit model using the new `ArgillaTrainer` with a `FeedbackDataset`. Building on the Add zero-shot suggestions using SetFit tutorial we have learnt how to train models on our datasets using the new Argilla APIs, without leaving Argilla.\n",
     "\n",
     "To learn more about SetFit, check out these links:\n",
     "\n",
-    "- [More SetFit + Argilla tutorials](../../../tutorials/libraries/setfit.md)\n",
     "- [SetFit repo on GitHub](https://github.com/huggingface/setfit)\n",
     "- [SetFit documentation](https://huggingface.co/docs/setfit/index)"
    ]
