updated pages for choosing a dataset reference

--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -9,7 +9,7 @@
         "\n",
         "Note\n",
         "    \n",
-        "This tutorial demonstrates a sample usage for `FeedbackDataset`, which offers implementations different from the old `TextClassificationDataset`, `Text2TextDataset` and `TokenClassificationDataset`. To have info about old datasets, you can have a look at [here](/getting_started/quickstart_workflow.html#Prepare-training-data).\n",
+        "This tutorial demonstrates a sample usage for `FeedbackDataset`, which offers implementations different from the old `TextClassificationDataset`, `Text2TextDataset` and `TokenClassificationDataset`. To have info about old datasets, you can have a look at [here](/getting_started/quickstart_workflow.html).\n",
         "    \n",
         "</div>"
       ]
