--- a/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
@@ -390,6 +390,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You should see the Argilla page ready to annotate as below.\n",
+    "\n",
+    "![Screenshot of Argilla UI](../../_static/tutorials/labelling-spacy-llm/feedback-annotation.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this tutorial, we have implemented a spacy-llm pipeline for text classification and summarization task. By Argilla Feedback, we have been able to add the model predictions as suggestions to our dataset so that our annotators can utilize them. For more info on spacy-llm, you can go to their LLM [page](https://spacy.io/usage/large-language-models), and for other uses of Argilla Feedback, you can refer to our [guides](https://docs.argilla.io/en/latest/guides/llms/practical_guides/practical_guides.html)."
    ]
   }
