--- a/docs/_source/tutorials/notebooks/labelling-tokenclassification-using-spacy-llm.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-tokenclassification-using-spacy-llm.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🔗 Token Classification using `spacy-llm` and Fewshot Learning\n",
+    "# 🔗 Using LLMs for Few-Shot Token Classification Suggestions with `spacy-llm`\n",
     "\n",
-    "This tutorial will guide you through a Named Entity Recognition (NER) pipeline using spacy-llm and fewshot learning. The steps will be as follows:\n",
+    "This tutorial will guide you through a Named Entity Recognition (NER) pipeline using spacy-llm and few-shot learning. The steps will be as follows:\n",
     "\n",
     "- Run Argilla and load `spacy-llm` along with other libraries\n",
     "- Define fewshot examples for the model\n",
@@ -179,7 +179,7 @@
     "\n",
     "Before defining pipeline, let us first create the examples that will be used for fewshot learning by our model.\n",
     "\n",
-    "### Fewshot examples\n",
+    "### Few-shot examples\n",
     "\n",
     "In `spacy-llm`, you have the opportunity to inject your examples into prompt to the LLM. As it will enhance the performance for your specific task, `spacy-llm` makes it very easy to have fewshot examples in your pipeline. You can have detailed info [here](https://spacy.io/api/large-language-models#ner).\n",
     "\n",
@@ -448,7 +448,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our dataset is now ready to be annotated with predictions from GPT3.5!\n",
+    "Our dataset is now ready to be annotated with predictions from GPT3.5! You can validate or discard the predictions done by the model.\n",
+    "\n",
+    "<img src=\"../../_static/tutorials/labelling-tokenclassification-using-spacy-llm/argilla-ner-annotation.png\" alt=\"NER Annotation\" style=\"width: 1100px;\">\n",
     "\n",
     "In this tutorial, we have implemented a `spacy-llm` pipeline for NER task by using model predictions from GPT3.5. In addition, we employed a fewshot learning approach to improve the performance of our model, which is facilitated by `spacy-llm`. You can see more tutorials on the use of `spaCy` with Argilla [here](https://docs.argilla.io/en/latest/tutorials/libraries/spacy.html)"
    ]
